# kate-gpg-plugin

./: .gitignore  CMakeLists.txt  GPGKeyDetails.cpp  GPGKeyDetails.hpp  GPGMeWrapper.cpp  GPGMeWrapper.hpp  README.md  gpgkeydetails.cpp  gpgkeydetails.hpp  gpgmeppwrapper.cpp  gpgmeppwrapper.hpp  kate_gpg_plugin.cpp  kate_gpg_plugin.hpp  kate_gpg_plugin.json  kategpgplugin.cpp  kategpgplugin.hpp
include/: GPGMeWrapper.hpp  kate_gpg_plugin.hpp
src/: GPGMeWrapper.cpp  kate_gpg_plugin.cpp
